# UE-Sim

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CODING_STYLE.md  CONTRIBUTING.md  QUICK_RELEASE_COMMANDS.md  README.md  TEST_EXECUTION_GUIDE.md  TEST_IMPLEMENTATION_PLAN.md  check-format.sh  code-quality-analysis.md  format-report.md  github-release-script.sh  index.md
.ccc/work/execution/20251210-015000/: execution-plan.md  oss-preparation.md
.ccc/work/maintenance/: generate-report.sh  run-monitoring.sh
.ccc/work/maintenance/20251210-014300/: health-monitor.sh  schedule-monitoring.sh  soft-ue-health-20251210-014424.json  trend-monitor.sh
.ccc/work/maintenance/trends/: trend-data-20251210-014615.json
.ccc/work/strategy/20251210-014800/: strategic-assessment.md
docs/: component-diagram.md  final-status-summary.md  github-release-README.md  github-release-plan.md  maintenance-report-2025-12-10.md  migration-analysis-report.md  open-source-release-preparation.md  project-status-final.md  release-checklist.md
docs/cccc/: 01-dataflow.md  02-problems-solutions.md  03-diagrams.md
docs/evidence/performance/: T001-multi-node-baseline.md
docs/por/: POR.md  scope.yaml
docs/por/T001-soft-ue-optimization/: task.yaml
performance/: run-soft-ue-fabric-read-stage-diagnose.py  soft_ue_truth_benchmark_lib.py
performance/config/: soft-ue-fabric-read-stage-diagnose.json
scratch/: comprehensive-soft-ue-test.cc  multi-node-test.cc  simple-multi-node.cc  soft-ue-demo.cc  soft-ue-integration-test.cc  t002-integration-test.cc  t002-simple-integration-test.cc
scratch/SUE-Sim/: SUE-Sim.cc
scratch/Soft-UE/: Soft-UE.cc  Soft-UE.cc.backup
scratch/Soft-UE-E2E-Concepts/: uec-e2e-concepts.cc
scripts/: quick-test.sh  run-soft-ue-tests.sh  soft-ue-validation-test.sh
src/soft-ue/: CMakeLists.txt
src/soft-ue/helper/: soft-ue-helper.cc  soft-ue-helper.h
src/soft-ue/model/common/: soft-ue-packet-tag.cc  soft-ue-packet-tag.h  transport-layer.h
src/soft-ue/model/network/: soft-ue-channel.cc  soft-ue-channel.h  soft-ue-net-device.cc  soft-ue-net-device.h
src/soft-ue/model/pdc/: ipdc.cc  ipdc.h  pdc-base.cc  pdc-base.h  tpdc.cc  tpdc.h
src/soft-ue/model/pds/: pds-common.h  pds-header.cc  pds-manager.cc  pds-manager.h  pds-statistics.cc
src/soft-ue/model/ses/: msn-entry.cc  msn-entry.h  operation-metadata.cc  operation-metadata.h  ses-manager.cc  ses-manager.h
src/soft-ue/test/: ipdc-test.cc  pds-full-test.cc  pds-manager-test.cc  ses-manager-test.cc  soft-ue-integration-test.cc  tpdc-test.cc
src/sue-sim-module/: CMakeLists.txt
src/sue-sim-module/examples/: CMakeLists.txt  sue-sim-module-example.cc
src/sue-sim-module/model/: performance-logger.cc  performance-logger.h
src/sue-sim-module/model/simulation-config/: application-deployer.cc  application-deployer.h  parameter-config.cc  parameter-config.h  topology-builder.cc  topology-builder.h
stress_test_results/: EXPERIMENT_REPORT.md  latency_distribution.csv  latency_percentiles.csv  performance_report.txt  summary.csv  throughput_timeseries.csv  visualize.py
项目剖析与追踪/: 07-UEC端到端概念实验与图解.md  08-SES-PDS-PDC-改进与实验计划.md  SES-PDS-PDC-改进.md  UEC项目总览与端到端实验图解.md
